solved Footer Alignment problems

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -489,6 +489,9 @@ li {
     }
 
     & .reviews-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       & .reviews {
         display: flex;
         gap: 2rem;
